<?xml version="1.0" encoding="utf-8"?>
<!--
* Copyright (C) 2026 Kevin Buzeau
*
* This program is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* This program is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.Dialog.BackgroundLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="@dimen/bottom_sheet_min_height">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        style="@style/AppTheme.Widget.AppBarLayout"
        app:liftOnScrollTargetViewId="@id/list"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/AppTheme.Widget.Toolbar"
            android:title="@string/dialog_title_scenario_switcher"
            app:navigationIcon="@drawable/ic_cancel"
            app:navigationContentDescription="@string/scenario_switcher_dismiss"
            app:subtitleTextAppearance="@style/AppTheme.TextAppearance.Body"
            tools:subtitle="Current: Currently loaded scenario" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_vertical_default"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/margin_vertical_default"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_scenario_switch" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_loading"
            style="@style/AppTheme.Widget.CircularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/empty_message"
            style="@style/AppTheme.TextAppearance.EmptyTextSecondary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/margin_horizontal_default"
            android:text="@string/scenario_switcher_empty"
            android:visibility="gone" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
