<?xml version="1.0" encoding="utf-8"?>
<!--
* Copyright (C) 2024 Kevin Buzeau
*
* This program is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* This program is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppTheme.Dialog.BackgroundLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_dialog_navigation_top_bar"
        android:id="@+id/layout_top_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_vertical_large"
        android:layout_marginBottom="@dimen/margin_vertical_extra_large"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_horizontal_default"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <include layout="@layout/include_field_text_input"
                android:id="@+id/field_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_horizontal_small"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_conditions"
                style="@style/AppTheme.Widget.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_vertical_large"
                app:strokeColor="@color/event_conditions_color"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin_vertical_default"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/AppTheme.TextAppearance.CardTitle.Event"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/event_conditions_color"
                        android:paddingVertical="@dimen/margin_vertical_small"
                        android:layout_marginBottom="@dimen/margin_vertical_default"
                        android:text="@string/menu_item_title_conditions"/>

                    <FrameLayout
                        android:id="@+id/layout_condition_selector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_horizontal_default">

                        <include layout="@layout/include_field_event_children"
                            android:id="@+id/field_image_conditions_selector"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            tools:visibility="visible"/>

                        <include layout="@layout/include_field_event_children"
                            android:id="@+id/field_trigger_conditions_selector"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone"/>

                        <include layout="@layout/include_field_selector"
                            android:id="@+id/field_empty_conditions_selector"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone" />

                    </FrameLayout>


                    <com.google.android.material.divider.MaterialDivider
                        style="@style/AppTheme.Widget.Divider.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="@dimen/margin_horizontal_default" />

                    <include layout="@layout/include_field_dual_state_text"
                        android:id="@+id/field_conditions_operator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_horizontal_default" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_actions"
                style="@style/AppTheme.Widget.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_vertical_large"
                android:minHeight="@dimen/item_height"
                app:strokeColor="@color/event_actions_color"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/margin_vertical_default">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/AppTheme.TextAppearance.CardTitle.Event"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/event_actions_color"
                        android:paddingVertical="@dimen/margin_vertical_small"
                        android:text="@string/menu_item_title_actions"/>

                    <FrameLayout
                        android:id="@+id/layout_actions_selector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_horizontal_default">

                        <include layout="@layout/include_field_event_children"
                            android:id="@+id/field_actions_selector"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/margin_vertical_default" />

                        <include layout="@layout/include_field_selector"
                            android:id="@+id/field_empty_actions_selector"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/margin_vertical_default"
                            android:visibility="gone" />

                    </FrameLayout>


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_event_config"
                style="@style/AppTheme.Widget.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_vertical_large"
                android:minHeight="@dimen/item_height"
                app:strokeColor="@color/event_state_color"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin_vertical_default"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/AppTheme.TextAppearance.CardTitle.Event"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/event_state_color"
                        android:paddingVertical="@dimen/margin_vertical_small"
                        android:layout_marginBottom="@dimen/margin_vertical_default"
                        android:text="@string/menu_item_title_state"/>

                    <include layout="@layout/include_field_switch"
                        android:id="@+id/field_is_enabled"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_horizontal_default" />

                    <com.google.android.material.divider.MaterialDivider
                        android:id="@+id/divider_keep_detecting"
                        style="@style/AppTheme.Widget.Divider.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="@dimen/margin_horizontal_default" />

                    <include layout="@layout/include_field_switch"
                        android:id="@+id/field_keep_detecting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_horizontal_default" />

                    <com.google.android.material.divider.MaterialDivider
                        android:id="@+id/divider_cooldown"
                        style="@style/AppTheme.Widget.Divider.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="@dimen/margin_horizontal_default" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cooldown_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="@dimen/margin_horizontal_default">

                        <include layout="@layout/include_field_switch"
                            android:id="@+id/field_cooldown_checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toTopOf="@id/edit_cooldown_value"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <include layout="@layout/include_field_text_input"
                            android:id="@+id/edit_cooldown_value"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/margin_horizontal_small"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/dropdown_cooldown_time_unit"
                            app:layout_constraintTop_toBottomOf="@id/field_cooldown_checkbox"/>

                        <include layout="@layout/include_input_field_dropdown"
                            android:id="@+id/dropdown_cooldown_time_unit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_horizontal_default"
                            app:layout_constraintStart_toEndOf="@id/edit_cooldown_value"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/edit_cooldown_value"
                            app:layout_constraintWidth_percent="0.3"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_event_test"
                style="@style/AppTheme.Widget.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_vertical_large"
                android:minHeight="@dimen/item_height"
                app:strokeColor="@color/event_test_color"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/field_test_event"
                        style="@style/AppTheme.TextAppearance.CardTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight = "1"
                        android:layout_marginVertical="@dimen/margin_vertical_default"
                        android:layout_marginHorizontal="@dimen/margin_horizontal_default"
                        tools:text="Test your event"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_test_event"
                        style="@style/AppTheme.Widget.IconButtonFilled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight = "0"
                        android:layout_marginVertical="@dimen/margin_vertical_default"
                        android:layout_marginHorizontal="@dimen/margin_horizontal_default"
                        app:icon="@drawable/ic_play_arrow"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
